public_html/style.css
html{
    height: 100%;
    margin: 0;
    padding: 0;
}
@font-face {
    font-family: Raleway;
    src: url(font/Raleway-SemiBold.woff);
}

body{
    /*background-color: #f5f5f5;*/
    /*background-color: #D0D9D6;*/
    /*background-color: #9B96A3;*/
    /*background-color: #66637A;*/
    /*background-color: #A4A2B3;*/
    /*background-color: #A8AFBD;*/
    /*background-color: #BFB9C9;*/
    /*background-color: #F7CBB8;*/
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 0;
    margin-top: 0;
    padding: 0;
    /*max-width: 59.375em;*/
    border: 0;
    font-family: Verdana, Helvetica, sans-serif;
    height: 100%;
}
h1{
  margin-top: 0;
}

#aiuti{
  position: absolute;
  height: 0;
  left: -9999em;
  overflow: hidden;
}

#aiuti:hover{
  left:0em;
  overflow: visible;
  color: black;
}
#aiuti:focus{
  left:0em;
  overflow: visible;
  color: black;
}

#wrapper {
	min-height:100%;
	position:relative;
}

#header {
    margin-left: 1em;
    background-color: #ffffff;

}
#prenotazione{
    padding-left: 2em;
}
/*#content{
    background-color: #ffffff;
    padding: 10px;
    padding-bottom: 12em;
}*/
#content {
    margin-left: 1em;
	padding-bottom:auto/*6.875em*/; /* Height of the footer element */
}

#centrale{
    margin-left: 1em;
	padding-bottom:6.875em; /* Height of the footer element */
}
form > fieldset p{
    padding-left: 2em;
}
/*
li {
  display: inline-block;
  vertical-align: middle;
  -webkit-transform: translateZ(0);
  transform: translateZ(0);
  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  -moz-osx-font-smoothing: grayscale;
  position: relative;
  overflow: hidden;
}
li:before {
  content: "";
  position: absolute;
  z-index: -1;
  left: 0;
  right: 0;
  bottom: 0;
  background: red;
  height: 0.25em;
  -webkit-transform: translateY(0.25em);
  transform: translateY(0.25em);
  -webkit-transition-property: transform;
  transition-property: transform;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  -webkit-transition-timing-function: ease-out;
  transition-timing-function: ease-out;
}
li:hover:before, li:focus:before, li:active:before {
  -webkit-transform: translateY(0);
  transform: translateY(0);
}
*/
#menu ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
    overflow: hidden;
    /*background-color: #ffa444;*/
    background-color: #940315;
}

#menu li {
    float: left;
}

#menu li, #menu a, #menu > ul > li > span{
    display: inline-block;
    /*color: #272727;*/
    color: #ffffff;
    text-align: center;
    padding-top: 0.3125em;
    padding-bottom: 0.3125em;
    text-decoration: none;
}

#breadcrumb, #breadcrumb a{
    color: #ffffff;
    padding-top: 0.3125em;
    padding-bottom: 0.3125em;
}

#menu li:hover{
    background-color: #5C0009;
}

#menu li{
    padding-top: 0.3125em;
}


#currentLink:hover{
    background-color: #5C0009;
}

#breadcrumb{
    /*background-color: #cccccc;*/
    background-color: #393845;
    /*color: #333333;*/
    color: #ffffff;
    padding-left: 1em;
    clear: both;
}
#breadcrumb > p{
    margin-top: 0;
}

/*#container {
   min-height:100%;
    height: 100%;
   position:relative;
}*/
/*#footer{
    position: absolute;
    bottom: 0;
    width: 920px;
    height: 6em;
    padding: 1em 1em 1em 1em;
    background-color: #333333;
    color: #cccccc;
}*/
#footer {
	background-color: #393845;
    color: #ffffff;
	width:100%;
	height:6.875em;
	position:absolute;
    padding-top: 0.25em;
    /*padding: 0em 1em 0.5em 1em;*/
	bottom:0;
	left:0;
}

#left{
    float: left;
    padding-left: 2em;
}

#left p{
    text-align: left;
    font-size: 0.75em;
}

#right p, h3{
    padding-right: 2em;
    text-align: right;
    font-size: 0.75em;
}

#imm_servizi{
  float: left;
  margin-top: 3em;
  margin-right: 2em;
  margin-bottom: 5em;
}

#logo{
    float:left;
}

#menu {
    width: 70%;
    float: right;
    /*background: #f0f0f0;*/
    /*border: 1px solid #ccc;*/
    border-right: none;
    margin-right: 1em;
}

#menu ul {
    overflow: hidden;
    margin-top: 1em;
	margin-left: 1em;
	margin-bottom: 1em;
    padding: 0px;
}

#menu > ul > li > a{
    /*font-size: 0.75em;*/
    font-size: 1.2vw;
}

#menu ul li {
    list-style: none;
    float: left;
    text-align: center;
    border-left: 0.0625em solid #fff;
    border-right: 0.0625em solid #ccc;
    /*width: 16.6667%;*/
    width: calc(100% / 7);
    box-sizing: border-box;
}

#menu ul li:first-child {
    border-left: none;
}

#menu ul li a, #menu > ul > li > span{
    display: block;
    text-decoration: none;
    color: #ffffff;
    padding: 10px 0;
}

.imgHome{
    width: 50%;
    height: auto;
}
#logo{
    width: 15.88675em;
    height: 5.858375em;
    /*width: 20%;
    height: auto;*/
}

input[type="text"]{
    font-family: Raleway, Verdana, Helvetica, sans-serif;
}
input{
    margin-right: 1em;
}

/*@media (max-width: 1240){
   #menu {
    width: 50em;
    }
}*/


input[type="submit"], input[type="reset"] {
	background-color:#940315;
	border:1px solid #54020C;
	display:inline-block;
	cursor:pointer;
	color:#ffffff;
	font-family: Raleway, Verdana, Helvetica, sans-serif;;
	font-size:0.75em;
	padding:6px 12px;
	text-decoration:none;
	text-shadow:0px 1px 0px #54020C;
}
input[type="submit"]:hover, input[type="reset"]:hover {
	background-color:#54020C;
    border:1px solid #940315;
}

fieldset{
    background-color: #8F8DAD;
    width: 60%;
}

#richiesta{
    width: 50%;
    margin-left: 1em;
	float: left;
}

#dettagli{
  float: left;
  clear: left;
  /*width: 50%;*/
  margin-left: 1em;
}

#dettprezzi {
    /*float:right;*/
    /*width: 50%;*/
}

.FormPren{
	clear:both;
}

.dati{
    /*float: left;*/
    padding-bottom: 2em;
    width: 100%;
    overflow: hidden;
}
.dati input:not(#prenota):not(#dataNascita):not(#cvc){
    width: 16em;
}
input#cvc{
    width: 3.125em;
}
input#dataNascita{
    width: 9em;
}


/*.dati fieldset{
    width: 100%;
}*/

.nascosto{
    display: none;
    height: 0px;
    
}

.dati #sinistra{
    width: 50%;
    float:left;
    position: relative;
}
.dati #destra{
    width: 50%;
    float: left;
    position: relative;
}

#elenco{
    padding-top: 1em;
}

.error{
    color: red;
    font-weight: bold;
    padding-left: 2em;
    font-size: 0.75em;
}

.error{
    background: url(Button-warning-icon.png);
    background-repeat: no-repeat;
    background-size: contain;
}

/*galleria + pagine interne*/

/*pagine interne*/

.imgGalleria{
	border-width:medium;
	border-color:#940315;;
	border-style:solid;
	margin-top: auto;
	margin-left: 2em;
	margin-right: 2em;
	margin-bottom: 3em;
	width:200px;
	height:200px;
}

#galleria{
	margin-top:auto;	
	margin-right:5em;
	margin-left:5em; 
	padding-bottom:6.875em;
}

/*galleria*/

#camere{
	margin-top:auto;	
	margin-right:3em;
	margin-left:3em; 
	padding-bottom:6.875em;
	float:left;
	diplay:block;
} 

#esterni{
	margin-top:auto;	
	margin-right:3em;
	margin-left:3em; 
	padding-bottom:6.875em;
	float:left;
	diplay:block;
} 

#ristorante{
	margin-top:auto;	
	margin-right:3em;
	margin-left:3em; 
	padding-bottom:6.875em;	
	diplay:block;
	float:clear;
} 

#ristorante a{
	float:left;
} 

#camere a{
	float:left;
} 

#esterni a{
	float:left;
} 

/*Chi siamo*/

#title
{
	margin-top:1em;
	margin-left:1em;
}

#content .imgchisiamo{
	width:250px;
	height:250px;
	float:left;
	margin-right:1em;
	border-width:medium;
	border-color:#940315;;
	border-style:solid;	
}

#content p
{
	text-align:left;
}

#content{
	margin-top:1em;
	padding-bottom:6.875em;		
}

#login  *{
 display:block;
 margin-top:5px;
 width:100%;
}

#login{
 width: 200px;
}

#logout{
 text-align:right;
 margin-right: 1em;
 display:block;
}

#bbForm *{
 margin-right: 1em;
 margin-top: 0.5em;
}

.prossima:nth-child(even){
 background:#0F6;
}
.prossima:nth-child(odd){
 background:#0E6;
}

.incorso:nth-child(even){
 background:#DDD;
}
.incorso:nth-child(odd){
 background:#BBB;
}

.scaduta{
color:#666;
}

.scaduta:nth-child(even) {
background: #EEE;
}
.scaduta:nth-child(odd) {
background: #CCC;
}

#t_stato_pren{
margin: 10px;

}

.separatore{
clear: both;
}

